--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Gabriel Araujo",
   "license": "ISC",
   "dependencies": {
+    "apollo-server": "^2.12.0",
     "apollo-server-express": "1.4.0",
     "babel-cli": "^6.26.0",
     "body-parser": "^1.19.0",
