--- a/package.json
+++ b/package.json
@@ -9,19 +9,18 @@
   "author": "Gabriel Araujo",
   "license": "ISC",
   "dependencies": {
-    "apollo-server-express": "1.4.0",
+    "apollo-server-express": "1.3.4",
     "babel-cli": "^6.26.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
-    "graphql": "^14.0.2",
-    "graphql-playground-middleware-express": "^1.7.14",
-    "graphql-subscriptions": "^1.1.0",
+    "graphql": "^0.13.2",
+    "graphql-subscriptions": "^0.5.8",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.3",
     "sequelize": "^4.41.2",
-    "subscriptions-transport-ws": "^0.9.16"
+    "subscriptions-transport-ws": "0.8.3"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
