--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "1.3.4",
+    "apollo-server-module-graphiql": "1.3.4",
     "babel-cli": "^6.26.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
@@ -20,7 +21,7 @@
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.3",
     "sequelize": "^4.41.2",
-    "subscriptions-transport-ws": "0.8.3"
+    "subscriptions-transport-ws": "0.9.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
